--- a/views/configuracion/saldo_inicial.html
+++ b/views/configuracion/saldo_inicial.html
@@ -5,9 +5,9 @@
          <h1>
             <p>
                <i class="fa-fw fa fa-dollar"></i>
-               Saldo inicial
+               Importar pólizas
             </p>
-            <small>Carga de saldo inicial</small>
+            <small>Carga masiva de pólizas desde archivo csv</small>
          </h1>
       </legend>
    </div>
@@ -82,6 +82,7 @@
                            <thead>
                               <tr>
                                  <th>Folio externo</th>
+                                 <th>Tipo de poliza</th>
                                  <th>Fecha</th>
                                  <th>Concepto de Póliza</th>
                                  <th>No. Cuenta</th>
@@ -93,6 +94,7 @@
                            <tbody>
                               <tr>
                                  <td>P001</td>
+                                 <td>1</td> 
                                  <td>mm-dd-aaaa</td>
                                  <td>Póliza por concepto "a"</td>
                                  <td>1.1.1.1</td>
@@ -102,6 +104,7 @@
                               </tr>
                               <tr>
                                  <td>P001</td>
+                                 <td>1</td>
                                  <td>mm-dd-aaaa</td>
                                  <td>Póliza por concepto "a"</td>
                                  <td>1.2.1</td>
