Wizard de reportes

--- a/views/layout.html
+++ b/views/layout.html
@@ -592,7 +592,7 @@ header,h1,h2,h3,h4{
 								</a>
 							</li>
                             <li>
-                                <a href="{{=URL('configuracion','saldo_inicial')}}"> 
+                                <a href="{{=URL('poliza','importar_polizas')}}"> 
                                 	<i class="fa fa-lg fa-fw  fa-upload"></i>
                                 	Importar pólizas 
                                 </a>
