--- a/views/reportes/reportes_creados.html
+++ b/views/reportes/reportes_creados.html
@@ -5,7 +5,7 @@
             <h1>
                 <p>
                     <i class="fa-fw fa  fa-usd"></i>
-                    {{=descripcion}}
+                    {{=nombre_reporte}}
                 </p>
             </h1>
         </legend>
@@ -17,10 +17,10 @@
 	<div class="row">
 		<article class="col-sm-12">
 			<!-- new widget -->
-			<div class="jarviswidget" id="wid-id-{{=XML(descripcion)}}" data-widget-togglebutton="false" data-widget-editbutton="false" data-widget-fullscreenbutton="false" data-widget-colorbutton="false" data-widget-deletebutton="false">
+			<div class="jarviswidget" id="wid-id-rep-creado-{{=str(reporte_id)}}" data-widget-togglebutton="false" data-widget-editbutton="false" data-widget-fullscreenbutton="false" data-widget-colorbutton="false" data-widget-deletebutton="false">
 				<header>
 					<span class="widget-icon"> <i class="fa fa-building txt-color-darken"></i> </span>
-					<h2>{{=descripcion}}</h2>
+					<h2>{{=nombre_reporte}}</h2>
 				</header>
 				<!-- widget div-->
 				<div class="no-padding">				
