--- a/views/cc_empresa/cc_grid.html
+++ b/views/cc_empresa/cc_grid.html
@@ -1,3 +1,4 @@
+<link href="{{=URL('static', 'css/tabs.css')}}" rel="stylesheet">
 {{extend 'layout.html'}}
 <script>
     $( document ).ready(function() {
@@ -38,7 +39,6 @@
         }
     } 
 </script>
-<link href="{{=URL('static', 'css/tabs.css')}}" rel="stylesheet">
 
 <div id="modal_editar" class="modalmask">
     <div class="modalbox movedown">
@@ -58,61 +58,65 @@
     </div>
 </div>
 
-
-                                <!-- widget grid -->
-                                <section id="widget-grid" class="">
-                                        <!-- row -->
-                                        <div class="row">
-                                                <article class="col-sm-12">
-                                                        <!-- new widget -->
-                                                        <div class="jarviswidget" id="wid-id-0" data-widget-togglebutton="false" data-widget-editbutton="false" data-widget-fullscreenbutton="false" data-widget-colorbutton="false" data-widget-deletebutton="false">
-                                                                <!-- widget options:
-                                                                usage: <div class="jarviswidget" id="wid-id-0" data-widget-editbutton="false">
-                                                                data-widget-colorbutton="false"
-                                                                data-widget-editbutton="false"
-                                                                data-widget-togglebutton="false"
-                                                                data-widget-deletebutton="false"
-                                                                data-widget-fullscreenbutton="false"
-                                                                data-widget-custombutton="false"
-                                                                data-widget-collapsed="true"
-                                                                data-widget-sortable="false"
-                                                                -->
-                                                                <header>
-                                                                        <span class="widget-icon"> <i class="fa fa-building txt-color-darken"></i> </span>
-                                                                        <h2>Catalogo Cuentas Contables</h2>
-                                                                        <ul class="nav nav-tabs pull-right in" id="myTab">
-                                                                                <li class="active">
-                                                                                        <a data-toggle="tab" href="#s1"><i class="fa fa-bar-chart-o"></i> <span class="hidden-mobile hidden-tablet">Listado</span></a>
-                                                                                </li>
-                                                                        </ul>
-                                                                </header>
-                                                                <!-- widget div-->
-                                                                <div class="no-padding">
-                                                                        <!-- widget edit box -->
-                                                                        <div class="jarviswidget-editbox">
-                                                                                test
-                                                                        </div>
-                                                                        <!-- end widget edit box -->
-                                                                        <div class="widget-body">
-                                                                                <!-- content -->
-                                                                                <div id="myTabContent" class="tab-content">
-                                                                                        <div class="tab-pane fade active in padding-10 no-padding-bottom" id="s1">
-                                                <div class="padding-10">
-                                                    <ul id="expList">
-                                                        {{=cc_empresa}}
-                                                    </ul>
-                                                                                                </div>
-                                                                                        </div>
-                                                                                        <!-- end s1 tab pane -->
-                                                                                </div>
-                                                                                <!-- end content -->
-                                                                        </div>
-                                                                </div>
-                                                                <!-- end widget div -->
-                                                        </div>
-                                                        <!-- end widget -->
-                                                </article>
-                                        </div>
-                                        <!-- end row -->
-                                </section>
-                                <!-- end widget grid -->
+<div class="row">
+    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+        <legend>
+            <h1>
+                <i class="fa-fw fa fa-list-ol "></i>
+                Catálogo de cuentas contables
+            </h1>
+        </legend>
+    </div>
+</div>
+<!-- widget grid -->
+<section id="widget-grid" class="">
+    <!-- row -->
+        <div class="row">
+            <article class="col-sm-12">
+                <!-- new widget -->
+                <div class="jarviswidget" id="wid-id-0" data-widget-togglebutton="false" data-widget-editbutton="false" data-widget-fullscreenbutton="false" data-widget-colorbutton="false" data-widget-deletebutton="false">
+                <!-- widget options:
+                usage: <div class="jarviswidget" id="wid-id-0" data-widget-editbutton="false">
+                data-widget-colorbutton="false"
+                data-widget-editbutton="false"
+                data-widget-togglebutton="false"
+                data-widget-deletebutton="false"
+                data-widget-fullscreenbutton="false"
+                data-widget-custombutton="false"
+                data-widget-collapsed="true"
+                data-widget-sortable="false"
+                -->
+                    <header>
+                        <span class="widget-icon">
+                            <i class="fa fa-list-ol txt-color-darken"></i>
+                        </span>                        
+                        <h2>Catalogo Cuentas Contables</h2>
+                    </header>
+                    <!-- widget div-->
+                    <div class="no-padding">
+                        <!-- widget edit box -->
+                        <div class="jarviswidget-editbox">
+                            test
+                        </div>
+                        <!-- end widget edit box -->
+                        <div class="widget-body">
+                            <!-- content -->
+                            <div id="myTabContent" class="tab-content">
+                                <div class="tab-pane fade active in padding-10 no-padding-bottom" id="s1">
+                                    <div class="padding-10">
+                                        {{=cc_empresa}}
+                                    </div>
+                                </div>
+                                <!-- end s1 tab pane -->
+                            </div>
+                            <!-- end content -->
+                        </div>
+                    </div>
+                <!-- end widget div -->
+            </div>
+            <!-- end widget -->
+        </article>
+    </div>
+    <!-- end row -->
+</section>
+<!-- end widget grid -->
