--- a/views/periodo/index.html
+++ b/views/periodo/index.html
@@ -1,27 +1,24 @@
 {{extend 'layout.html'}}
 
-{{=periodos}}
+{{=form}}
 
 <script>
 
 $(document).ready(function(){
 
-    $(function(){
-        $('div[id$=cerrar').each(function(){
-            console.log('cerrar');
-        });
+    $('.cerrar').each(function(){
+        console.log('cerrar');
     });
 
-
-    $(function(){
-        $('.abrir').click(function(){
-            console.log('abrir');
-        });
+    $('.abrir').click(function(){
+        console.log('abrir');
     });
 
 });
 
 $.getJSON('{{=URL("listar")}}', function(json){ 
+
+    console.log(json);
 
     var tabla = "";
     $.each(json, function(ke, va) {
@@ -31,6 +28,11 @@ $.getJSON('{{=URL("listar")}}', function(json){
         id = va['id'];
         
         $.each(this, function(k , v) {
+            
+            if (k == 'nombre') {
+                div = "<div class='poliza' id='" + id + "poliza'>Póliza</div>";
+                fila += "<td class='poliza'><a href={{=URL('poliza', 'listar')}}?id=" + id + ">Ir a periodo</a></td>";
+            }
 
             if (k != '_extra')
                 if (k != 'estatus')
@@ -40,7 +42,7 @@ $.getJSON('{{=URL("listar")}}', function(json){
                 else if (v == 'T'){
                     div = "<div class='cerrar' id='" + id + "cerrar'>Cerrar</div>";
                     fila += "<td>" + div + "</td>";
-                    fila += "<td class='cerrar'><a href='cerrar?rabrir=" + id + "'>Cerrar</a></td>";
+                    fila += "<td class='cerrar'><a href='cerrar?cerrar=" + id + "'>Cerrar</a></td>";
                 }
                 else {
                     div = "<div class='abrir' id='" + id + "abrir'>Abrir</div>";
