--- a/views/reportes/balanza.html
+++ b/views/reportes/balanza.html
@@ -10,7 +10,16 @@ table > tbody > tr:hover{
 </style>
 
 
-
+<div class="row">
+    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+        <legend>
+            <h1>
+                <i class="fa-fw fa fa-filter"></i>
+                Balanza de comprobación
+            </h1>
+        </legend>
+    </div>
+</div>
 <!-- widget grid -->
 <section id="widget-grid" class="">
     <!-- row -->
@@ -19,11 +28,11 @@ table > tbody > tr:hover{
             <!-- new widget -->
             <div class="jarviswidget" id="wid-id-0" data-widget-togglebutton="false" data-widget-editbutton="false" data-widget-fullscreenbutton="false" data-widget-colorbutton="false" data-widget-deletebutton="false">
                 <header>
-                    <span class="widget-icon"> <i class="fa fa-building txt-color-darken"></i> </span>
+                    <span class="widget-icon"> <i class="fa fa-filter txt-color-darken"></i> </span>
                     <h2>Balanza del periodo: {{=fecha_inicial}} al {{=fecha_final}}</h2>
                     <ul class="nav nav-tabs pull-right in" id="myTab">
                         <li class="active">
-                            <a data-toggle="tab" href="#s1"><i class="fa fa-bar-chart-o"></i> <span class="hidden-mobile hidden-tablet">Listado</span></a>
+                            <a data-toggle="tab" href="#s1"><i class="fa fa-list"></i> <span class="hidden-mobile hidden-tablet">Listado</span></a>
                         </li>
                         <li>
                             <a data-toggle="tab" href="#s2"><i class="fa fa-search"></i> <span class="hidden-mobile hidden-tablet">Filtros</span></a>
