--- a/views/periodo/index.html
+++ b/views/periodo/index.html
@@ -39,12 +39,12 @@ $.getJSON('{{=URL("listar")}}', function(json){
                     fila += "<td>"+v+"</td>";
 
                 /* construir link para abrir y cerrar póliza */
-                else if (v == 'T'){
+                else if (v == '1') {
                     div = "<div class='cerrar' id='" + id + "cerrar'>Cerrar</div>";
                     fila += "<td>" + div + "</td>";
                     fila += "<td class='cerrar'><a href='cerrar?cerrar=" + id + "'>Cerrar</a></td>";
                 }
-                else {
+                else if (v == '2') {
                     div = "<div class='abrir' id='" + id + "abrir'>Abrir</div>";
                     fila += "<td>" + div + "</td>";
                     fila += "<td class='abrir'><a href='abrir?abrir=" + id + "'>Abrir</a></td>";
