--- a/views/periodo/index.html
+++ b/views/periodo/index.html
@@ -42,12 +42,13 @@ $.getJSON('{{=URL("listar")}}', function(json){
                 else if (v == '1') {
                     div = "<div class='cerrar' id='" + id + "cerrar'>Cerrar</div>";
                     fila += "<td>" + div + "</td>";
-                    fila += "<td class='cerrar'><a href='cerrar?cerrar=" + id + "'>Cerrar</a></td>";
+                    fila += "<td class='cerrar'><a href={{=URL('periodo', 'cerrar')}}?cerrar=" + id + ">Cerrar</a></td>";
                 }
                 else if (v == '2') {
                     div = "<div class='abrir' id='" + id + "abrir'>Abrir</div>";
                     fila += "<td>" + div + "</td>";
-                    fila += "<td class='abrir'><a href='abrir?abrir=" + id + "'>Abrir</a></td>";
+                    fila += "<td class='abrir'><a href={{=URL('periodo', 'abrir')}}?abrir=" + id + ">Abrir</a></td>";
+
                 }
 
         });
